--- a/.tas.yml
+++ b/.tas.yml
@@ -2,10 +2,10 @@
 framework: mocha                  # Mention the testing framework mocha or jest
 postMerge:
     pattern:
-    - "./test/logger.ts"            # Glob pattern to path where tests that should run post-merge are written
+    - "./test/*.ts"            # Glob pattern to path where tests that should run post-merge are written
 preMerge:
     pattern:
-    - "./test/logger.ts"           # Glob pattern to path where tests that should run pre-merge are written
+    - "./test/*.ts"           # Glob pattern to path where tests that should run pre-merge are written
 preRun:
     - npm install                   # Mention pre-run steps here
 postRun:
