--- a/.tas.yml
+++ b/.tas.yml
@@ -7,7 +7,9 @@ preMerge:
     pattern:
     - "./test/*.ts"           # Glob pattern to path where tests that should run pre-merge are written
 preRun:
+  command:
     - npm install                   # Mention pre-run steps here
 postRun:
+  command:
     - node --version                # Mention post-run steps here
 version: 2.0
